# learnrust

./: .gitignore  README.md
notes/: faq.md  glossary.md  install.md  mechanics.md  resources.md  rustbook.md  shocks.md  tips.md  useless.md
rpl/: README.md
rpl/_01_hello/: main.rs
rpl/_02_hello_cargo/: Cargo.toml  README.md
rpl/_03_guessing_game/: Cargo.toml  README.md
rpl/_03_guessing_game/src/: _naked.rs  main.rs
rpl/_04_basics/branches/: Cargo.toml
rpl/_04_basics/branches/src/: main.rs
rpl/_04_basics/types/: Cargo.toml
rpl/_04_basics/types/src/: main.rs
rpl/_04_basics/variables/: Cargo.toml
rpl/_04_basics/variables/src/: main.rs
rpl/_05_ownership/_01_scope/: Cargo.toml
rpl/_05_ownership/_01_scope/src/: main.rs
rpl/_05_ownership/_02_string/: Cargo.toml
rpl/_05_ownership/_03_move/: Cargo.toml
rpl/_05_ownership/_04_funcs/: Cargo.toml  main
rpl/_05_ownership/_05_references/: Cargo.toml
rpl/_05_ownership/_06_dangling/: Cargo.toml
rpl/_05_ownership/_07_slices/: Cargo.toml
rpl/_06_structs/: Cargo.toml
rpl/_06_structs/src/: main.rs
rpl/_06_structs_example/: Cargo.toml
rpl/_06_structs_example/src/: main.rs
rpl/_07_methods/: Cargo.toml
rpl/_07_methods/src/: main.rs
rpl/_08_enums/: Cargo.toml
rpl/_08_enums/src/: main.rs
rpl/_09_match/: Cargo.toml
rpl/_09_match/src/: main.rs
rpl/_10_packages/: Cargo.toml
rpl/_10_packages/src/: front_of_house.rs  lib.rs
rpl/_11_collections/: Cargo.toml
rpl/_11_collections/exercises/: README.md
rpl/_11_collections/src/: hashmaps.rs  main.rs  strings.rs  vectors.rs
(+11 files in other folders)
